try to solve difficulty to click on save button on mobile
Ignore-this: 3bf502e5276a3ccde225bfa0db0657b2

darcs-hash:20130715141933-88306-0a997325241defbd22bd3fd5450a5d712d125883

--- a/web_app/static/css/graffiti.css
+++ b/web_app/static/css/graffiti.css
@@ -101,18 +101,13 @@ td
 
 .save_link
 {
-    float: left;
-    margin-top: 12px;
-    margin-left: 17px;
     border: 0px;
 }
 
 .save_div
 {
-    width: 26px;
-    height: 26px;
-    transition: 1s;
-    -webkit-transition: 1s;
+    width: 100%;
+    height: 100%;
 }
 
 .gray_layer
