--- a/web_app/static/css/graffiti_medium_screen.css
+++ b/web_app/static/css/graffiti_medium_screen.css
@@ -18,11 +18,6 @@
         top: 80px;
     }
 
-    .save_div
-    {
-        width: 13px;
-    }
-
     .palette_wrap
     {
         left: -196px;
